kubernetes/deployment-remote2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: remote-agent-2
  namespace: a2a-demo # 更新：使用 a2a-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: remote-agent-2
  template:
    metadata:
      labels:
        app: remote-agent-2
    spec:
      serviceAccountName: ds-a2a-remote-agent-b-sa  # 使用 IRSA Service Account
      containers:
      - name: remote-agent-2-container
        image: 182399696164.dkr.ecr.ap-southeast-1.amazonaws.com/image/a2a_demo_remote_agent2:20251010052359 # 🚨 替換成你的 Docker image 路徑
        ports:
        - containerPort: 50002
