kubernetes/deployment-root.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: root-agent
  namespace: a2a-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: root-agent
  template:
    metadata:
      labels:
        app: root-agent
    spec:
      containers:
      - name: root-agent-container
        image: 182399696164.dkr.ecr.ap-southeast-1.amazonaws.com/image/a2a_demo_root_agent:20251010163515
        imagePullPolicy: Always
        ports:
        - containerPort: 50000
