kubernetes/deployment-summary.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: summary-agent
  namespace: a2a-demo
  labels:
    agentRole: summary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: summary-agent
  template:
    metadata:
      labels:
        app: summary-agent
        agentRole: summary
    spec:
      # ServiceAccount 對應 Terraform local.summary_agent_sa_name
      serviceAccountName: ds-a2a-remote-agent-b-sa-summary
      containers:
      - name: summary-agent-container
        image: 182399696164.dkr.ecr.ap-southeast-1.amazonaws.com/image/a2a_demo_summary_agent:20251010052359 # 🚨 替換成你的 Docker image 路徑
        ports:
        - containerPort: 50003
